--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -130,10 +130,10 @@ jobs:
           FILE1="code-coverage-jobs/coverage.xml"; [[ ! -f $FILE1 ]] && FILE1=""
           FILE2="code-coverage-pipeline/coverage.xml"; [[ ! -f $FILE2 ]] && FILE2=""
           pip install diff_cover
-          diff-cover $FILE1 $FILE2
-          DIFF=$(diff-cover $FILE1 $FILE2 | grep Coverage: | cut -d' ' -f 2 | cut -d'%' -f 1)
+          diff-cover --compare-branch=main $FILE1 $FILE2
+          DIFF=$(diff-cover --compare-branch=main $FILE1 $FILE2 | grep Coverage: | cut -d' ' -f 2 | cut -d'%' -f 1)
           if [[ -z $DIFF ]]; then 
-            DIFF_INFO=$(diff-cover $FILE1 $FILE2 | grep "No lines");
+            DIFF_INFO=$(diff-cover --compare-branch=main $FILE1 $FILE2 | grep "No lines");
             BODY="REPORT: $DIFF_INFO"
           else
             if [[ $DIFF < 80 ]]; then COLOR=red; else COLOR=green; fi
