--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -136,7 +136,7 @@ jobs:
         uses: actions/checkout@v3
       - name: "Fetch main branch"
         run: |
-          git fetch origin main --depth 10
+          git fetch origin main
       - name: "Download coverage files"
         uses: actions/download-artifact@v3
       - name: "Display structure of downloaded files"
