ODSC-41181. Coverage diff report

--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -22,7 +22,7 @@ concurrency:
 
 permissions:
   contents: read
-  issues: write
+  pull-requests: write
 
 # hack for https://github.com/actions/cache/issues/810#issuecomment-1222550359
 env:
