ODSC-41181. Coverage diff report

--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -113,7 +113,7 @@ jobs:
           -n auto --dist loadfile \
           ${{ matrix.cov }} ${{ matrix.cov-xml-report }} \
           ${{ matrix.test-path }} \
-          --ignore ${{ matrix.ignore-path }}
+          --ignore "${{ matrix.ignore-path }}"
           ls -lha
 
 #       Uploading test artifacts
