--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -40,7 +40,7 @@ jobs:
         # python-version: ["3.8", "3.9", "3.10"]
         python-version: ["3.8", "3.9"]
         # test-path: ["tests/unitary", "tests/unitary/with_extras/model"]
-        test-path: ["tests/unitary/default_setup/jobs", "tests/unitary/default_setup/feature_types"]
+        test-path: ["tests/unitary/default_setup/jobs", "tests/unitary/default_setup"]
         include:
           - test-path: "tests/unitary/default_setup/jobs"
             name: "jobs"
@@ -110,8 +110,7 @@ jobs:
           NoDependency: True
         run: |
           python -m pytest -v -p no:warnings --durations=5 \
-          -n auto --dist loadfile \
-          ${{ matrix.cov }} ${{ matrix.cov-xml-report }} \
+          -n auto --dist loadfile ${{ matrix.cov }} ${{ matrix.cov-xml-report }} \
           ${{ matrix.test-path }} \
           --ignore "${{ matrix.ignore-path }}"
           ls -lha
