--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -42,9 +42,9 @@ jobs:
         include:
           - test-path: "tests/unitary"
             ignore-path: "tests/unitary/with_extras/model"
-            name: "unitary tests"
+            name: "unitary"
           - test-path: "tests/unitary/with_extras/model"
-            name: "model tests"
+            name: "model"
           - python-version: "3.8"
             cov: --cov=
             cov-xml-report: --cov-report=xml
@@ -145,8 +145,8 @@ jobs:
           BODY="$BODY_INTRO No success to gather report."
           
           # Prepare file paths to coverage xml files
-          FILE1="cov-xml-report-jobs/coverage.xml"; [[ ! -f $FILE1 ]] && FILE1="" 
-          FILE2="cov-xml-report-feature_types/coverage.xml"; [[ ! -f $FILE2 ]] && FILE2=""
+          FILE1="cov-xml-report-unitary/coverage.xml"; [[ ! -f $FILE1 ]] && FILE1="" 
+          FILE2="cov-xml-report-model/coverage.xml"; [[ ! -f $FILE2 ]] && FILE2=""
           echo "FILE1=$FILE1" >> $GITHUB_ENV
           echo "FILE2=$FILE2" >> $GITHUB_ENV
           
