--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -46,7 +46,7 @@ jobs:
           - test-path: "tests/unitary/with_extras/model"
             name: "model"
           - python-version: "3.8"
-            cov-xml-report: --cov= --cov-report=xml
+            cov-xml-report: --cov=ads --cov-report=xml:cov-${{ matrix.name }}.xml
 
     steps:
       - uses: actions/checkout@v3
@@ -115,7 +115,7 @@ jobs:
         with:
           name: cov-xml-report-${{ matrix.name }}
           path: |
-            coverage.xml
+            cov-${{ matrix.name }}.xml
 
   coverage-report:
     name: "Coverage report"
@@ -144,8 +144,8 @@ jobs:
           BODY="$BODY_INTRO No success to gather report."
           
           # Prepare file paths to coverage xml files
-          FILE1="cov-xml-report-unitary/coverage.xml"; [[ ! -f $FILE1 ]] && FILE1="" 
-          FILE2="cov-xml-report-model/coverage.xml"; [[ ! -f $FILE2 ]] && FILE2=""
+          FILE1="cov-xml-report-unitary/cov-unitary.xml"; [[ ! -f $FILE1 ]] && FILE1="" 
+          FILE2="cov-xml-report-model/cov-model.xml"; [[ ! -f $FILE2 ]] && FILE2=""
           echo "FILE1=$FILE1" >> $GITHUB_ENV
           echo "FILE2=$FILE2" >> $GITHUB_ENV
           
