--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -101,7 +101,9 @@ jobs:
           CONDA_PREFIX: /usr/share/miniconda
           NoDependency: True
         run: |
+          set -x # print commands that are executed
           [[ -z "${{ matrix.cov-xml-report }}" ]] || COV_REPORT_NAME=:cov-${{ matrix.name }}.xml
+          
           python -m pytest -v -p no:warnings --durations=5 \
           -n auto ${{ matrix.cov-xml-report }}$COV_REPORT_NAME \
           ${{ matrix.test-path }} \
@@ -145,6 +147,7 @@ jobs:
           BODY="$BODY_INTRO No success to gather report."
           
           # Prepare file paths to coverage xml files
+          # Filenames taken from job.test last step with name - "Save coverage files"
           FILE1="cov-xml-report-unitary/cov-unitary.xml"; [[ ! -f $FILE1 ]] && FILE1="" 
           FILE2="cov-xml-report-model/cov-model.xml"; [[ ! -f $FILE2 ]] && FILE2=""
           echo "FILE1=$FILE1" >> $GITHUB_ENV
