--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -105,7 +105,7 @@ jobs:
           [[ -z "${{ matrix.cov-xml-report }}" ]] || COV_REPORT_NAME=:cov-${{ matrix.name }}.xml
           
           python -m pytest -v -p no:warnings --durations=5 \
-          -n auto ${{ matrix.cov-xml-report }}$COV_REPORT_NAME \
+          -n auto --dist loadfile ${{ matrix.cov-xml-report }}$COV_REPORT_NAME \
           ${{ matrix.test-path }} \
           --ignore "${{ matrix.ignore-path }}"
           ls -lha
